souravstyle.css
:root {
	--red: #fb4934;
	--yellow: #fabd2f;
	--lime: #b8bb26;
	--green: #b8bb26;
	--cyan: #8ec07c;
	--blue: #83a598;
	--purple: #d3869b;
	--pink: #b16286;
	--accent: var(--blue);

	--background: #3c3836;
	--backdrop: #282828;
	--foreground: #ebdbb2;
	--shadow: 0 0 20px 0 rgba(0, 0, 0, 0.3);
}


/*Start animations*/


/*End animations*/
.imgclass1{
	max-height:80px;
	max-width:130px;

}

.zoom {
	-ms-transform: scale(1.5); /* IE 9 */
	-webkit-transform: scale(1.5); /* Safari 3-8 */
	transform: scale(1.5);
}

ul {
	display: flex;
	position: absolute;
	left: 27%;
	transform: translate(-50%, -50%);
}

ul li {
	list-style: none;
}

ul li a {
	width: 24px;
	height: 24px;
	background-color: #fff;
	text-align: center;
	line-height: 80px;
	font-size: 14px;
	margin: 10px 4px;
	display: block;
	border-radius: 50%;
	border-style: dot-dot-dash;
	position: relative;
	overflow: hidden;
	border: 2px solid #fff;
	z-index: 1;
}

ul li a .icon1 {
	position: relative;
	margin-top:5px;
	color: #fbf1c7;
	transition: .5s;
	z-index: 3;
}

ul li a:hover .icon {
	color: #fff;
	transform: rotateY(360deg);
}

ul li a:before {
	content: "";
	position: absolute;
	top: 100%;
	left: 0;
	width: 100%;
	height: 100%;
	background: #f00;
	transition: .5s;
	z-index: 1;
}

ul li a:hover:before {
	top: 0;
}

ul li:nth-child(1) a:before{
	background: var(--lime);
}

ul li:nth-child(2) a:before{
	background: var(--cyan);
}

ul li:nth-child(3) a:before {
	background: #0077b5;
}

ul li:nth-child(4) a:before {
	background: #dd4b39;
}



  .boxclassinfinite {
	position: absolute;
	left: 3%;
	height:82%;
	background: var(--background);
	min-width: 90%;
	min-height: 82%;
	top: 4%; /* Same as boxclass */
	padding: 40px 20px 20px 30px;
	border-radius: 8px;
	box-shadow: var(--shadow);
	transition: calc(100ms * 2);
	overflow-y:hidden;
	-ms-overflow-style: none;
	scrollbar-width: none;
	text-align: left;
	z-index:9;
  }
  .boxclass3 {
	position: absolute;
	margin-top:150px;
	height:150px;
	margin-left:-340pt;
	background: var(--background);
	min-width: 850px;
	min-height: 450px;
	padding: 40px 20px 20px 30px;
	border-radius: 8px;
	box-shadow: var(--shadow);
	transition: calc(100ms * 2);
	overflow-y: auto;
	-ms-overflow-style: none;
	scrollbar-width: none;
	text-align: left;
  }
  .containers1 {
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
    position: absolute;
    left: 7%;
    right: 7%;
    top: 15%;
    gap: 2%; /* Space between the boxes */
}
  
.boxclass, .boxclass1 {
	margin-left:16px;
    background: var(--background);
    max-width: 450px;
    min-height: 250px;
	margin-top:50px;
    padding: 40px 20px 20px 30px;
    border-radius: 8px;
    box-shadow: var(--shadow);
    transition: margin 100ms;
    overflow-y: auto;
    -ms-overflow-style: none;
    scrollbar-width: auto;
	gap: 4px;
}
.boxclass {
	top:1%;
}
.boxclass1 {
	position: absolute;
	top:27px;
	height:250px;
	
	background: var(--background);
	min-width: 450px;
	min-height: 252px;
	padding: 40px 20px 20px 30px;
	border-radius: 8px;
	box-shadow: var(--shadow);
	transition: calc(100ms * 2);
	overflow-y: auto;
	-ms-overflow-style: none;
	scrollbar-width: none;
	text-align: left;
}

.boxclass1 h1 {
    text-align: center;
}

.boxclass1::-webkit-scrollbar {
    display: none;
}

@media screen and (max-width: 768px) {
    #boxcontainer {
        flex-direction: column;
        gap: 20px;
    }

    .boxclass, .boxclass1 {
        max-width: 100%;
    }
}
  

html {
	color: var(--foreground);
	background: var(--backdrop);
	font-family: "Noto Sans", Roboto, sans-serif;
}

h1 {
	font-weight: 600;
}

h2 {
	margin-left: 20px;
}

a,
h2,
.accent {
	color: var(--accent);
}

/* a {
	text-align: right;
	margin-right: 20px;
	text-decoration: none;
	font-weight: 500;
} */

	.anch1 {
	text-align: right;
  margin-right: 20px;
  text-decoration: none;
  font-weight: 500;
	}
	 .anch2 {
  text-align: right;
  margin-right: 20px;
  text-decoration: none;
  font-weight: 500;
  }
	 .anch3 {
  text-align: right;
  margin-right: 20px;
  text-decoration: none;
  font-weight: 500;
  }
	 .anch4 {
  text-align: right;
  margin-right: 20px;
  text-decoration: none;
  font-weight: 500;
  }
	 .anch5 {
  text-align: right;
  margin-right: 20px;
  text-decoration: none;
  font-weight: 500;
  }

h1 {
	text-align: center;
}

.links p > span {
	display: block;
}

@media (min-width: 600px) {
	.links p {
		display: grid;
		grid-template-columns: 12ch calc(100% - 12ch);
		margin: 8px 0;
	}
}

@media (max-width: 940px) {
	body {
		margin-top: 0;
	}
}
.gradient {
	font-family: "Lucida Console", "Courier New", monospace, cursive;
	background: linear-gradient(
		to right,
		#fbf1c7,
		var(--yellow),
		var(--blue)
	);
	-webkit-background-clip: text;

	color: transparent;
	animation: rainbow 5s ease infinite;
	background-size: 400% 100%;
}

@keyframes rainbow {
	0%,
	100% {
		background-position: 0 0;
	}
	50% {
		background-position: 100% 0;
	}
}

/* dark mode */
@media (prefers-color-scheme:dark) {
	:root {
	 --red: #fb4934;
	  --yellow: #fabd2f;
	  --lime: #b8bb26;
	  --green: #b8bb26;
	  --cyan: #8ec07c;
	  --blue: #83a598;
	  --purple: #d3869b;
	  --pink: #b16286;
		--accent: var(--blue);

		--background: #282828;
	  --backdrop: #1d2021;
		--foreground: #ebdbb2;
		--shadow: 0 0 20px 0 rgba(0, 0, 0, 0.3);
	}
}

.about-class {
	text-transform: capitalize;
	margin: 20px;
}
.about-topic {


	margin: 20px;
}

.sattire {
	text-transform: capitalize;
	font-family: noto sans-serif , Roboto;
	font-size: 10px;
	font-weight: 100;
	margin-left: 100px;
}
.neo {
	text-transform: capitalize;
	font-size: 12px;
	color:#458588;
	font-family: sans-serif , Roboto;
	font-weight: bold;
	padding-bottom: -100px ;
	margin-left: 370px;
	opacity: 0;
}
.neo:hover{
	opacity:1;
}
.anc{
	font-size: 15px;
	margin-left:40%;
	opacity: 0;
}
.anc:hover{
	opacity: 1;
	background: linear-gradient(
			to right,
			var(--lime),
			var(--cyan),
			var(--blue),
			var(--purple)
	);
	-webkit-background-clip: text;

	color: transparent;
	animation: rainbow 5s ease infinite;
	background-size: 400% 100%;
}

a{
	background: linear-gradient(
			to right,
			var(--lime),
			var(--cyan),
			var(--blue),
			var(--purple)
	);
	-webkit-background-clip: text;

	color: transparent;
	animation: rainbow 5s forwards infinite;
	background-size: 400% 100%;
}
.logo-glitchh:hover{
	background: #ffff;
}
a:hover{
	animation: animate 2s linear infinite;
}

.name-info{
	font-weight: bolder;
}



.realname{
    font-weight: bold;
	text-transform: uppercase;
	background-image: linear-gradient(
			-90deg,
	    #282828 40%,
		#c98a57 30%	
				);
	background-size: auto auto;
	background-clip: border-box;
	background-size: 200% auto;
	color: #fff;
	text-fill-color: transparent;
	-webkit-background-clip: text;
	-webkit-text-fill-color: transparent;
	animation: textclip 2s cubic-bezier(0.25, 0.46, 0.45, 0.94) infinite;
	
}

@keyframes textclip {
	to {
		background-position: 200% center;
	}
}

.realname1{
    font-weight: bold;
	text-transform: uppercase;
	background-image: linear-gradient(
			-90deg,
	    #282828 10%,
		#c98a57 30%	
				);
	background-size: auto auto;
	background-clip: border-box;
	background-size: 200% auto;
	color: #fff;
	text-fill-color: transparent;
	-webkit-background-clip: text;
	-webkit-text-fill-color: transparent;
	animation: textclip 2s cubic-bezier(0.25, 0.46, 0.45, 0.94) infinite;
	
}
@keyframes textclip {
	to {
		background-position: 200% center;
	}
}

